utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/valid/ExistingReference.ac
package valid

tool ExistingReference {
    language Language
    environment Environment
}
