utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/invalid/ExistingReference.ac
package invalid

tool ExistingReference {
    language Language2
    environment Environment2
}
